--- a/Assignment_01.ipynb
+++ b/Assignment_01.ipynb
@@ -6,7 +6,7 @@
       "name": "Copy of Untitled16.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOmv0pci1152zAOCEfjExQ+",
+      "authorship_tag": "ABX9TyPxDJU/M+RLukKg3jXIxxs5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1066,6 +1066,61 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "x=int(input(\"take any number:\"))\n",
+        "y=int(input(\"take any number\"))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "y4CRL3mV8W1O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number=[]\n",
+        "x=int(input(\"Enter number of elements in list\"))\n",
+        "for i in range(x):\n",
+        "    number.append(int(input()))\n",
+        "findNum=int(input(\"The number to be deleted is \"))\n",
+        "i=0\n",
+        "for element in number:\n",
+        "    if(element == findNum):\n",
+        "        number.pop(i)\n",
+        "        x=x-1\n",
+        "        i=i-1\n",
+        "    i=i+1\n",
+        "    \n",
+        "print(number)"
+      ],
+      "metadata": {
+        "id": "AWk_TcrQ_Skj",
+        "outputId": "c58b55f3-c9af-46b2-b824-1ebdc2fb3f14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number of elements in list4\n",
+            "25\n",
+            "50\n",
+            "75\n",
+            "100\n",
+            "The number to be deleted is 75\n",
+            "[25, 50, 100]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "**Q.15)You are given a list of integer elements. Make a new list that will store a square of elements of the previous list. (With and without list comprehension)**\n",
@@ -1079,13 +1134,31 @@
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        ""
+        "Input_list=[2,5,6,12]\n",
+        "Output_list=[]\n",
+        "for i in Input_list:\n",
+        "    Output_list.append(i**2)\n",
+        "print(Output_list)\n"
       ],
       "metadata": {
-        "id": "8bzLNTGDeSZ9"
-      }
+        "id": "NTV_Uf1PDhOT",
+        "outputId": "ee86f36b-17b9-4f30-c18d-b2f1da7ce72a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[4, 25, 36, 144]\n"
+          ]
+        }
+      ]
     }
   ]
 }
