--- a/Machine_Learning_Blog1.ipynb
+++ b/Machine_Learning_Blog1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled70.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMCvGCO9c486pxu71SJdwYb",
+      "authorship_tag": "ABX9TyOSY35nHO5IzEVDW5OVCMfR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,7 +213,73 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "#2)Unsupervised Machine Learning\n",
+        "\n",
+        "Unsupervised learning is different from the Supervised learning technique; as its name suggests, there is no need for supervision. It means, in unsupervised machine learning, the machine is trained using the unlabeled dataset, and the machine predicts the output without any supervision.\n",
+        "\n",
+        "In unsupervised learning, the models are trained with the data that is neither classified nor labelled, and the model acts on that data without any supervision.\n",
+        "\n",
+        "\n",
+        "Unsupervised Learning can be further classified into two types, which are given below:\n",
+        "\n",
+        "**A)Clustering**\n",
+        "\n",
+        "**B)Association**\n",
+        "\n",
+        "**A)Clustering**\n",
+        "\n",
+        "The clustering technique is used when we want to find the inherent groups from the data. It is a way to group the objects into a cluster such that the objects with the most similarities remain in one group and have fewer or no similarities with the objects of other groups. An example of the clustering algorithm is grouping the customers by their purchasing behaviour.\n",
+        "\n",
+        "Some of the popular clustering algorithms are given below:\n",
+        "\n",
+        "**-K-Means Clustering algorithm**\n",
+        "\n",
+        "**-Mean-shift algorithm**\n",
+        "\n",
+        "**-DBSCAN Algorithm**\n",
+        "\n",
+        "**-Principal Component Analysis**\n",
+        "\n",
+        "**-Independent Component Analysis**\n",
+        "\n",
+        "\n",
+        "**B)Association**\n",
+        "\n",
+        "Association rule learning is an unsupervised learning technique, which finds interesting relations among variables within a large dataset. The main aim of this learning algorithm is to find the dependency of one data item on another data item and map those variables accordingly so that it can generate maximum profit. This algorithm is mainly applied in Market Basket analysis, Web usage mining, continuous production, etc.\n",
+        "\n",
+        "Some popular algorithms of Association rule learning are Apriori Algorithm, Eclat, FP-growth algorithm.\n",
+        "\n",
+        "Advantages and Disadvantages of Unsupervised Learning Algorithm\n",
+        "\n",
+        "**Advantages:**\n",
+        "\n",
+        "These algorithms can be used for complicated tasks compared to the supervised ones because these algorithms work on the unlabeled dataset.\n",
+        "\n",
+        "Unsupervised algorithms are preferable for various tasks as getting the unlabeled dataset is easier as compared to the labelled dataset.\n",
+        "\n",
+        "**Disadvantages:**\n",
+        "\n",
+        "-The output of an unsupervised algorithm can be less accurate as the dataset is not labelled, and algorithms are not trained with the exact output in prior.\n",
+        "\n",
+        "-Working with Unsupervised learning is more difficult as it works with the unlabelled dataset that does not map with the output.\n",
+        "\n",
+        "**Applications of Unsupervised Learning**\n",
+        "\n",
+        "**Network Analysis:**\n",
+        "\n",
+        " Unsupervised learning is used for identifying plagiarism and copyright in document network analysis of text data for scholarly articles.\n",
+        "\n",
+        "**Recommendation Systems:**\n",
+        "\n",
+        " Recommendation systems widely use unsupervised learning techniques for building recommendation applications for different web applications and e-commerce websites.\n",
+        "\n",
+        "**Anomaly Detection:**\n",
+        "\n",
+        " Anomaly detection is a popular application of unsupervised learning, which can identify unusual data points within the dataset. It is used to discover \n",
+        "\n",
+        "**fraudulent transactions.**\n",
+        "\n",
+        "Singular Value Decomposition: Singular Value Decomposition or SVD is used to extract particular information from the database. For example, extracting information of each user located at a particular location."
       ],
       "metadata": {
         "id": "GfW1-ygSxMm2"
@@ -222,7 +288,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "#3)Semi-Supervised Learning\n",
+        "\n",
+        "Semi-Supervised learning is a type of Machine Learning algorithm that lies between Supervised and Unsupervised machine learning. It represents the intermediate ground between Supervised (With Labelled training data) and Unsupervised learning (with no labelled training data) algorithms and uses the combination of labelled and unlabeled datasets during the training period.\n",
+        "\n",
+        "**To overcome the drawbacks of supervised learning and unsupervised learning algorithms, the concept of Semi-supervised learning is introduced**. \n",
+        "\n",
+        "The main aim of semi-supervised learning is to effectively use all the available data, rather than only labelled data like in supervised learning. Initially, similar data is clustered along with an unsupervised learning algorithm, and further, it helps to label the unlabeled data into labelled data. It is because labelled data is a comparatively more expensive acquisition than unlabeled data.\n",
+        "\n",
+        "Advantages and disadvantages of Semi-supervised Learning\n",
+        "\n",
+        "**Advantages:**\n",
+        "\n",
+        "It is simple and easy to understand the algorithm.\n",
+        "\n",
+        "It is highly efficient.\n",
+        "\n",
+        "It is used to solve drawbacks of Supervised and Unsupervised Learning \n",
+        "algorithms.\n",
+        "\n",
+        "**Disadvantages:**\n",
+        "\n",
+        "Iterations results may not be stable.\n",
+        "\n",
+        "We cannot apply these algorithms to network-level data.\n",
+        "\n",
+        "Accuracy is low."
       ],
       "metadata": {
         "id": "2DnyBpU0xMcW"
@@ -231,7 +322,60 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "#4)Reinforcement Learning\n",
+        "\n",
+        "Reinforcement learning works on a feedback-based process, in which an AI agent (A software component) automatically explore its surrounding by hitting & trail, taking action, learning from experiences, and improving its performance. Agent gets rewarded for each good action and get punished for each bad action; hence the goal of reinforcement learning agent is to maximize the rewards.\n",
+        "\n",
+        "Due to its way of working, reinforcement learning is employed in different fields such as Game theory, Operation Research, Information theory, multi-agent systems.\n",
+        "\n",
+        "**Categories of Reinforcement Learning**\n",
+        "\n",
+        "Reinforcement learning is categorized mainly into two types of methods/algorithms:\n",
+        "\n",
+        "**A)Positive Reinforcement Learning:**\n",
+        "\n",
+        "Positive reinforcement learning specifies increasing the tendency that the required behaviour would occur again by adding something. It enhances the strength of the behaviour of the agent and positively impacts it.\n",
+        "\n",
+        "**B)Negative Reinforcement Learning:**\n",
+        "\n",
+        "Negative reinforcement learning works exactly opposite to the positive RL. It increases the tendency that the specific behaviour would occur again by avoiding the negative condition.\n",
+        "\n",
+        "**Real-world Use cases of Reinforcement Learning**\n",
+        "\n",
+        "**Video Games:**\n",
+        "\n",
+        "RL algorithms are much popular in gaming applications. It is used to gain super-human performance. Some popular games that use RL algorithms are AlphaGO and AlphaGO Zero.\n",
+        "\n",
+        "**Resource Management:**\n",
+        "\n",
+        "The \"Resource Management with Deep Reinforcement Learning\" paper showed that how to use RL in computer to automatically learn and schedule resources to wait for different jobs in order to minimize average job slowdown.\n",
+        "\n",
+        "**Robotics:**\n",
+        "\n",
+        "RL is widely being used in Robotics applications. Robots are used in the industrial and manufacturing area, and these robots are made more powerful with reinforcement learning. There are different industries that have their vision of building intelligent robots using AI and Machine learning technology.\n",
+        "\n",
+        "**Text Mining**\n",
+        "\n",
+        "Text-mining, one of the great applications of NLP, is now being implemented with the help of Reinforcement Learning by Salesforce company.\n",
+        "\n",
+        "\n",
+        "Advantages and Disadvantages of Reinforcement Learning\n",
+        "\n",
+        "**Advantages**\n",
+        "\n",
+        "-It helps in solving complex real-world problems which are difficult to be solved by general techniques.\n",
+        "\n",
+        "-The learning model of RL is similar to the learning of human beings; hence most accurate results can be found.\n",
+        "\n",
+        "-Helps in achieving long term results.\n",
+        "\n",
+        "**Disadvantage**\n",
+        "\n",
+        "-RL algorithms are not preferred for simple problems.\n",
+        "\n",
+        "-RL algorithms require huge data and computations.\n",
+        "\n",
+        "-Too much reinforcement learning can lead to an overload of states which can weaken the results."
       ],
       "metadata": {
         "id": "VRQNj5bvxMKn"
